--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -2,3 +2,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.Card {
+  @apply w-48 h-64 shadow-md rounded-lg shrink-0 snap-center;
+}
+.card-details {
+  @apply w-full h-2/5 rounded-b-lg flex flex-col justify-center gap-2 p-4;
+}
+
+.Card:nth-child(even) {
+  @apply bg-white text-tertiary;
+}
+.Card:nth-child(odd) {
+  @apply bg-secondary text-white;
+}
