Haciendo responsivo la sección de RENTAS DESTACADAS flex

--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -22,11 +22,11 @@
 }
 
 .Card-rentas {
-  @apply w-full h-96 bg-cover rounded-xl flex-none shadow-md;
+  @apply w-auto h-96 bg-cover rounded-xl flex-none shadow-md mb-8;
 }
 .Card-rentas p:nth-child(1) {
   @apply text-3xl px-8 pt-8 pb-2 font-semibold text-white;
 }
 .Card-rentas p:nth-child(2) {
-  @apply text-sm pl-8 mr-24 text-black;
+  @apply text-sm pl-8 mr-24 text-white lg:text-lg;
 }
