--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -11,10 +11,10 @@
 }
 
 .Card:nth-child(even) {
-  @apply bg-white text-tertiary;
+  @apply bg-white text-tertiary dark:bg-gray-800 dark:text-gray-300;
 }
 .Card:nth-child(odd) {
-  @apply bg-secondary text-white;
+  @apply bg-secondary text-white dark:bg-gray-700;
 }
 
 .CardTitle {
